# abemis

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: readthedocs.yaml
abemis/: __init__.py  activity_based.py  afolu.py  constants.py  efdb.py  ippu.py  stationary_energy.py  transportation.py  utils.py  waste.py
abemis/efdb/: EFDB_afolu.xlsx  EFDB_energy.xlsx  EFDB_ippu.xlsx  EFDB_waste.xlsx
docs/: api.rst  authors.rst  conf.py  contributing.rst  environment.yaml  index.rst  requirements.txt  usage.rst
docs/_static/css/: custom.css
